cleaned up bottom part of notebook

--- a/model_notebooks/knn_model_v1.ipynb
+++ b/model_notebooks/knn_model_v1.ipynb
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing both pickles for dataset, model"
+    "# (OLD) Testing both pickles for dataset, model"
    ]
   },
   {
@@ -771,7 +771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get Pridict Function Features"
+    "# Get Spotify API Token / Output Audio Features"
    ]
   },
   {
@@ -811,18 +811,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'token' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-34a6da760050>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtoken_content\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'token'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'BQDV5uxot89HUONu6W3I2eYWhfsC7Hr2-WHxEnSUZrw9gwOkgCLOR24ybZ1ugojL8dOLAZtjGNrOHfmCyqwPNo0vdhCnzQ0WDylZkKqo6cLeDJfd3Td4LYae4WHfszw3Tlhr75RUY-GchDme-Ol9WekwqZEA5kLi-0ZnZ76P2ckYVultmS-S3T4tmqJJZR5PF5PhBmrI1Cgqc8n6QPRuOzQ2VE2EJn9cBiWdq3B27Bi73s'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'token' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "token_content = {'token': 'BQCEhCfQoAEwvw7muBWJ4fQmCKmB37d0a0PRz-FPGNHxXQjiW9YWECFFKXDYSrJ_Id_fKtA9rKnOUZJmrancJzmlxDPGBCzhQWNZ9sQK6FNfIlCyy81UVqUiWUT-2rOXkskvZXgjkqwamQMZ0Eu-3FbKxfOdxw'}"
+    "token_content = {'token': {token: 'BQDV5uxot89HUONu6W3I2eYWhfsC7Hr2-WHxEnSUZrw9gwOkgCLOR24ybZ1ugojL8dOLAZtjGNrOHfmCyqwPNo0vdhCnzQ0WDylZkKqo6cLeDJfd3Td4LYae4WHfszw3Tlhr75RUY-GchDme-Ol9WekwqZEA5kLi-0ZnZ76P2ckYVultmS-S3T4tmqJJZR5PF5PhBmrI1Cgqc8n6QPRuOzQ2VE2EJn9cBiWdq3B27Bi73s'}}"
    ]
   },
   {
@@ -867,13 +872,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -910,13 +908,6 @@
    "source": [
     " acoustical_features = get_features(get_id(token))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1143,9 +1134,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spotipy_test",
+   "display_name": "spotipy",
    "language": "python",
-   "name": "spotipy_test"
+   "name": "spotipy"
   },
   "language_info": {
    "codemirror_mode": {
