--- a/model_notebooks/knn_model_v1.ipynb
+++ b/model_notebooks/knn_model_v1.ipynb
@@ -2,7 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package          Version   \n",
+      "---------------- ----------\n",
+      "backcall         0.1.0     \n",
+      "certifi          2019.11.28\n",
+      "chardet          3.0.4     \n",
+      "click            6.7       \n",
+      "colorama         0.4.3     \n",
+      "decorator        4.4.1     \n",
+      "Flask            1.1.1     \n",
+      "gunicorn         20.0.4    \n",
+      "heroku3          4.2.1     \n",
+      "idna             2.8       \n",
+      "ipykernel        5.1.4     \n",
+      "ipython          7.12.0    \n",
+      "ipython-genutils 0.2.0     \n",
+      "itsdangerous     0.24      \n",
+      "jedi             0.16.0    \n",
+      "Jinja2           2.10.1    \n",
+      "joblib           0.14.1    \n",
+      "jupyter-client   5.3.4     \n",
+      "jupyter-core     4.6.1     \n",
+      "MarkupSafe       1.0       \n",
+      "numpy            1.18.1    \n",
+      "pandas           0.25.3    \n",
+      "parso            0.6.1     \n",
+      "pickleshare      0.7.5     \n",
+      "pip              19.0.3    \n",
+      "prompt-toolkit   3.0.3     \n",
+      "Pygments         2.5.2     \n",
+      "python-dateutil  2.8.1     \n",
+      "pytz             2019.3    \n",
+      "pywin32          227       \n",
+      "pyzmq            18.1.1    \n",
+      "requests         2.22.0    \n",
+      "scikit-learn     0.22.1    \n",
+      "scipy            1.4.1     \n",
+      "setuptools       40.8.0    \n",
+      "six              1.14.0    \n",
+      "sklearn          0.0       \n",
+      "spotipy          2.7.1     \n",
+      "tornado          6.0.3     \n",
+      "traitlets        4.3.3     \n",
+      "urllib3          1.25.8    \n",
+      "wcwidth          0.1.8     \n",
+      "Werkzeug         0.15.0    \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using pip version 19.0.3, however version 20.0.2 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,11 +857,45 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "            User authentication requires interaction with your\n",
+      "            web browser. Once you enter your credentials and\n",
+      "            give authorization, you will be redirected to\n",
+      "            a url.  Paste that url you were directed to to\n",
+      "            complete the authorization.\n",
+      "\n",
+      "        \n",
+      "Opened https://accounts.spotify.com/authorize?client_id=902612cb00f94d378aa63c119b090897&response_type=code&redirect_uri=https%3A%2F%2Fgoogle.com%2F&scope=user-library-read in your browser\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the URL you were redirected to:  https://www.google.com/?code=AQCr9wksu9EkvlIQRLpZAWyt_hbVWmMByB2xyaFhV7r_ul9cJocDvNr3n4eDRuAQ97JarGSR8FoX1rW03-IC4ILfJlIsAuFwNr9zW7NWAZnMEDf5Q5v4IQe6JtBmCfG8de0UijOTH28TOZt3vVn8drOEFUov-5G6445hCO6UnLTd1ZpogxClIGgBNbt9TQvFHxLZ4l-0JNxIIC0F\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "USERNAME = 'rileypence4' #your spotify username\n",
-    "CLIENT_ID = '47c4f0d3dcaa433c9ef4ec6686e5b1f1' #set at your developer account\n",
-    "CLIENT_SECRET = '65812a5fb52b4a3486f59ec672d499ff' #set at your developer account\n",
+    "USERNAME = 'generalgreens' #your spotify username\n",
+    "CLIENT_ID = '902612cb00f94d378aa63c119b090897' #set at your developer account\n",
+    "CLIENT_SECRET = '84c63543d9e844db90059f14e69d8a51' #set at your developer account\n",
     "REDIRECT_URI = 'https://google.com/' #set at your developer account, usually \"http://localhost:8000\"\n",
     "SCOPE = 'user-library-read' # or else\n",
     "# ps. REDIRECT_URI is crucial here. if http://localhost:8000 is not set, or with a single '/' misplaced, it will generate a connection error.\n",
@@ -811,28 +914,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'token' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-34a6da760050>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtoken_content\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'token'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'BQDV5uxot89HUONu6W3I2eYWhfsC7Hr2-WHxEnSUZrw9gwOkgCLOR24ybZ1ugojL8dOLAZtjGNrOHfmCyqwPNo0vdhCnzQ0WDylZkKqo6cLeDJfd3Td4LYae4WHfszw3Tlhr75RUY-GchDme-Ol9WekwqZEA5kLi-0ZnZ76P2ckYVultmS-S3T4tmqJJZR5PF5PhBmrI1Cgqc8n6QPRuOzQ2VE2EJn9cBiWdq3B27Bi73s'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'token' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'BQAuxAqZlqyiBIPC-2MnrYjFH2amjQm8tLkh_ZYI_HkJ8MUHepG_lQrofpN--fGXM8b3tfXMfshOUvoF2Dkuh8iCepPvIvXqxCfrfSi52Rr8Njq0cnyLpde4_xo1v0-lMDjpMpeEOccK7yV_PPBVadskMoOr'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "token_content = {'token': {token: 'BQDV5uxot89HUONu6W3I2eYWhfsC7Hr2-WHxEnSUZrw9gwOkgCLOR24ybZ1ugojL8dOLAZtjGNrOHfmCyqwPNo0vdhCnzQ0WDylZkKqo6cLeDJfd3Td4LYae4WHfszw3Tlhr75RUY-GchDme-Ol9WekwqZEA5kLi-0ZnZ76P2ckYVultmS-S3T4tmqJJZR5PF5PhBmrI1Cgqc8n6QPRuOzQ2VE2EJn9cBiWdq3B27Bi73s'}}"
+    "token"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_content = {'token': token}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +952,7 @@
        "dict"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,16 +963,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BQCEhCfQoAEwvw7muBWJ4fQmCKmB37d0a0PRz-FPGNHxXQjiW9YWECFFKXDYSrJ_Id_fKtA9rKnOUZJmrancJzmlxDPGBCzhQWNZ9sQK6FNfIlCyy81UVqUiWUT-2rOXkskvZXgjkqwamQMZ0Eu-3FbKxfOdxw'"
+       "'BQAuxAqZlqyiBIPC-2MnrYjFH2amjQm8tLkh_ZYI_HkJ8MUHepG_lQrofpN--fGXM8b3tfXMfshOUvoF2Dkuh8iCepPvIvXqxCfrfSi52Rr8Njq0cnyLpde4_xo1v0-lMDjpMpeEOccK7yV_PPBVadskMoOr'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,11 +1013,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     " acoustical_features = get_features(get_id(token))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'audio_features': {'liveness': 0.204,\n",
+       "  'acousticness': 0.472,\n",
+       "  'key': 9,\n",
+       "  'danceability': 0.889,\n",
+       "  'energy': 0.816,\n",
+       "  'speechiness': 0.247,\n",
+       "  'mode': 1,\n",
+       "  'loudness': -4.67,\n",
+       "  'valence': 0.777,\n",
+       "  'instrumentalness': 0,\n",
+       "  'time_signature': 4,\n",
+       "  'tempo': 96.056}}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acoustical_features"
    ]
   },
   {
@@ -918,28 +1060,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "content = {\n",
-    "    \"audio_features\": {\n",
-    "        \"acousticness\": 0.934,\n",
-    "        \"danceability\": 0.186,\n",
-    "        \"energy\": 0.107,\n",
-    "        \"instrumentalness\": 0,\n",
-    "        \"key\": 5,\n",
-    "        \"liveness\": 0.297,\n",
-    "        \"loudness\": -14.802,\n",
-    "        \"mode\": 1,\n",
-    "        \"speechiness\": 0.0347,\n",
-    "        \"tempo\": 107.095,\n",
-    "        \"time_signature\": 4,\n",
-    "        \"valence\": 0.149\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "\n",
     "def predict(content):\n",
     "    similar_songs = []\n",
     "    print('Loading dataframe...')\n",
@@ -972,7 +1096,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from flask import request\n",
+    "from joblib import dump\n",
+    "from joblib import load\n",
+    "\n",
+    "import pandas as pd\n",
+    "from pandas.io.json import json_normalize\n",
+    "from flask import jsonify"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -985,20 +1126,7 @@
       "Pickled scaler loaded\n",
       "Scaling dataframe object...\n",
       "Dataframe scaled\n",
-      "Loading pickled model...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\riley\\Documents\\GitHub\\Music-Meteorologist-ds\\spotipy\\spotipy_test\\lib\\site-packages\\ipykernel_launcher.py:23: FutureWarning: pandas.io.json.json_normalize is deprecated, use pandas.json_normalize instead\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Loading pickled model...\n",
       "Model loaded\n",
       "Prediction executed\n",
       "song_id_list loading...\n",
@@ -1009,29 +1137,29 @@
     {
      "data": {
       "text/plain": [
-       "{'songs': [{'similarity': [0.99], 'values': '6UzHbPir2YDNbEiPz80Sv0'},\n",
-       "  {'similarity': [0.99], 'values': '4tWazjRxG8Dih3u8Q0xi0Y'},\n",
-       "  {'similarity': [0.99], 'values': '3Gz6x2IVyKAZsOsi7TUqIo'},\n",
-       "  {'similarity': [0.99], 'values': '7xebfKM5F78dzoIdSG5xqD'},\n",
-       "  {'similarity': [0.99], 'values': '1pThp5wzu8Lcs7izQzyhju'},\n",
-       "  {'similarity': [0.99], 'values': '70KrFx4OuJaRctXISpgmYV'},\n",
-       "  {'similarity': [0.99], 'values': '7FZdJB7R0dY8LHDNG3H0uB'},\n",
-       "  {'similarity': [0.99], 'values': '4HXjISybpBxnLGZTnkgJ18'},\n",
-       "  {'similarity': [0.99], 'values': '15Fmm7QqHSgJSefDVjgPhh'},\n",
-       "  {'similarity': [0.99], 'values': '45xGsYv9ToQJtwei3SV1FH'},\n",
-       "  {'similarity': [0.99], 'values': '65Tg0GzmFp9wQySyuv6Sc7'},\n",
-       "  {'similarity': [0.99], 'values': '0yALfeWhCfCTxdW2pCq074'},\n",
-       "  {'similarity': [0.99], 'values': '2BDYnVC9qdpM9CAKio9hc2'},\n",
-       "  {'similarity': [0.99], 'values': '5oeTtWtecBnS23RhonRKk3'},\n",
-       "  {'similarity': [0.99], 'values': '4559MuHvjvvxrAtnP45EzO'},\n",
-       "  {'similarity': [0.99], 'values': '1iynqe0qFBDGej00eLklic'},\n",
-       "  {'similarity': [0.99], 'values': '2Ee3eru5tqz7DKXswFjYmr'},\n",
-       "  {'similarity': [0.99], 'values': '0y1rwQTl03qHWPy8q4Gq3G'},\n",
-       "  {'similarity': [0.99], 'values': '2hPs2i4X4bC9dF7qU4w8xe'},\n",
-       "  {'similarity': [0.99], 'values': '4xyS7muZOcgGzLvtj1AiDw'}]}"
+       "{'songs': [{'similarity': [0.99], 'values': '5YdNeg0onlsEFoNdFjwG9X'},\n",
+       "  {'similarity': [0.99], 'values': '3XDPtaCpjC83LW1E7wfeVW'},\n",
+       "  {'similarity': [0.99], 'values': '6Ycon1DmLHH4xVVZaJqEdI'},\n",
+       "  {'similarity': [0.99], 'values': '6T8DFxrmY8y03FGYDxkmpg'},\n",
+       "  {'similarity': [0.99], 'values': '0lO6VPXcW9wIOKxZ0wecjG'},\n",
+       "  {'similarity': [0.99], 'values': '56KyV36puztkiJ62ca3D1t'},\n",
+       "  {'similarity': [0.99], 'values': '2UUIpe2Jtflo8dX9jeTSqQ'},\n",
+       "  {'similarity': [0.99], 'values': '6lneyspCLiV4hfccAidPeU'},\n",
+       "  {'similarity': [0.99], 'values': '4nKjzgBwU9ksBUG4VJ787c'},\n",
+       "  {'similarity': [0.99], 'values': '6galGfTFHHzsPieYkReYyN'},\n",
+       "  {'similarity': [0.99], 'values': '7F9Dbj9ul1FtOPcsXDF3R9'},\n",
+       "  {'similarity': [0.99], 'values': '0e7jY6MjiJdKNwUiwDhyxM'},\n",
+       "  {'similarity': [0.99], 'values': '1LVfv8UzT0Zw3YjAbfcl4U'},\n",
+       "  {'similarity': [0.99], 'values': '3QUgFGZvPhtdioo1MRepuE'},\n",
+       "  {'similarity': [0.99], 'values': '6SuyOjhiF6vssCI7URWLDZ'},\n",
+       "  {'similarity': [0.99], 'values': '015p8TgFahkz0viuux9YGJ'},\n",
+       "  {'similarity': [0.99], 'values': '498Mc4zwlG8CVY41WAU738'},\n",
+       "  {'similarity': [0.99], 'values': '6Gg5fvbFY39W8k50vDknJY'},\n",
+       "  {'similarity': [0.99], 'values': '1bDVFRCoYuy0uf5o3rThLJ'},\n",
+       "  {'similarity': [0.99], 'values': '7jWQ4T9tMiZWge0GTUPvDX'}]}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,6 +1168,13 @@
     "%timeit\n",
     "\n",
     "predict(acoustical_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dump"
    ]
   },
   {
@@ -1148,7 +1283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
