uploading updates to AWS branch. problems with application.py file predict functions.

--- a/model_notebooks/knn_model_v1.ipynb
+++ b/model_notebooks/knn_model_v1.ipynb
@@ -2,75 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Package          Version   \n",
-      "---------------- ----------\n",
-      "backcall         0.1.0     \n",
-      "certifi          2019.11.28\n",
-      "chardet          3.0.4     \n",
-      "click            6.7       \n",
-      "colorama         0.4.3     \n",
-      "decorator        4.4.1     \n",
-      "Flask            1.1.1     \n",
-      "gunicorn         20.0.4    \n",
-      "heroku3          4.2.1     \n",
-      "idna             2.8       \n",
-      "ipykernel        5.1.4     \n",
-      "ipython          7.12.0    \n",
-      "ipython-genutils 0.2.0     \n",
-      "itsdangerous     0.24      \n",
-      "jedi             0.16.0    \n",
-      "Jinja2           2.10.1    \n",
-      "joblib           0.14.1    \n",
-      "jupyter-client   5.3.4     \n",
-      "jupyter-core     4.6.1     \n",
-      "MarkupSafe       1.0       \n",
-      "numpy            1.18.1    \n",
-      "pandas           0.25.3    \n",
-      "parso            0.6.1     \n",
-      "pickleshare      0.7.5     \n",
-      "pip              19.0.3    \n",
-      "prompt-toolkit   3.0.3     \n",
-      "Pygments         2.5.2     \n",
-      "python-dateutil  2.8.1     \n",
-      "pytz             2019.3    \n",
-      "pywin32          227       \n",
-      "pyzmq            18.1.1    \n",
-      "requests         2.22.0    \n",
-      "scikit-learn     0.22.1    \n",
-      "scipy            1.4.1     \n",
-      "setuptools       40.8.0    \n",
-      "six              1.14.0    \n",
-      "sklearn          0.0       \n",
-      "spotipy          2.7.1     \n",
-      "tornado          6.0.3     \n",
-      "traitlets        4.3.3     \n",
-      "urllib3          1.25.8    \n",
-      "wcwidth          0.1.8     \n",
-      "Werkzeug         0.15.0    \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using pip version 19.0.3, however version 20.0.2 is available.\n",
-      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip list"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -845,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +802,7 @@
       "            complete the authorization.\n",
       "\n",
       "        \n",
-      "Opened https://accounts.spotify.com/authorize?client_id=902612cb00f94d378aa63c119b090897&response_type=code&redirect_uri=https%3A%2F%2Fgoogle.com%2F&scope=user-library-read in your browser\n",
+      "Opened https://accounts.spotify.com/authorize?client_id=b954b92b9a674e6a9cf7322649da82d1&response_type=code&redirect_uri=https%3A%2F%2Fgoogle.com%2F&scope=user-library-read in your browser\n",
       "\n",
       "\n"
      ]
@@ -880,7 +811,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the URL you were redirected to:  https://www.google.com/?code=AQCr9wksu9EkvlIQRLpZAWyt_hbVWmMByB2xyaFhV7r_ul9cJocDvNr3n4eDRuAQ97JarGSR8FoX1rW03-IC4ILfJlIsAuFwNr9zW7NWAZnMEDf5Q5v4IQe6JtBmCfG8de0UijOTH28TOZt3vVn8drOEFUov-5G6445hCO6UnLTd1ZpogxClIGgBNbt9TQvFHxLZ4l-0JNxIIC0F\n"
+      "Enter the URL you were redirected to:  https://www.google.com/?code=AQB6_guH_Q9DO3bhNcW534HrKK8bs0qvOZuuUDkWgYuzBXz-cdVz2uFdXlFM4X3nkXIfZ-yyx5-LVeSxJWtGp5j6cH3PhdznuNqVhfrh02QG0eF38xbO-UiPvtFg-lfr6FudpyjfwIQouNkiDbe6SfGR4yEM_MV7SBFEZ3FA7sWicsF7vXl38ekWg9Qui4D_Awk0pdBTDVkbFAwT\n"
      ]
     },
     {
@@ -893,9 +824,9 @@
     }
    ],
    "source": [
-    "USERNAME = 'generalgreens' #your spotify username\n",
-    "CLIENT_ID = '902612cb00f94d378aa63c119b090897' #set at your developer account\n",
-    "CLIENT_SECRET = '84c63543d9e844db90059f14e69d8a51' #set at your developer account\n",
+    "USERNAME = 'augt12ocf9csxa4s8kbq9reg8' #your spotify username\n",
+    "CLIENT_ID = 'b954b92b9a674e6a9cf7322649da82d1' #set at your developer account\n",
+    "CLIENT_SECRET = '920cd41023994b1a99210243ce8967b2' #set at your developer account\n",
     "REDIRECT_URI = 'https://google.com/' #set at your developer account, usually \"http://localhost:8000\"\n",
     "SCOPE = 'user-library-read' # or else\n",
     "# ps. REDIRECT_URI is crucial here. if http://localhost:8000 is not set, or with a single '/' misplaced, it will generate a connection error.\n",
@@ -914,16 +845,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BQAuxAqZlqyiBIPC-2MnrYjFH2amjQm8tLkh_ZYI_HkJ8MUHepG_lQrofpN--fGXM8b3tfXMfshOUvoF2Dkuh8iCepPvIvXqxCfrfSi52Rr8Njq0cnyLpde4_xo1v0-lMDjpMpeEOccK7yV_PPBVadskMoOr'"
+       "'BQAzm9VZMwr75qsRL2WkGWTyRVqFn9OYXIEFEzlOZfijT07_L8W5VBu0KymszA5Eg3n2_4np7yS6zibHQnfDt-DS8GZQ-7heWLAh51v4J15HzBCZhMdLJYZKgVq8aPaWU6Rfj52bmNPKnIUCvClGq-ixU2Laml5q_oUZwN7-sPko'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,9 +1200,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spotipy",
+   "display_name": "sounddrip",
    "language": "python",
-   "name": "spotipy"
+   "name": "sounddrip"
   },
   "language_info": {
    "codemirror_mode": {
