--- a/data_collection/Utilizing_Client_Credentials2.ipynb
+++ b/data_collection/Utilizing_Client_Credentials2.ipynb
@@ -2,49 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
-      "Wall time: 5.96 µs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%time\n",
+    "# %time\n",
     "\n",
-    "import os\n",
-    "import sys\n",
-    "import json\n",
-    "import spotipy\n",
-    "import webbrowser\n",
-    "import spotipy.util as util\n",
-    "from json.decoder import JSONDecodeError\n",
-    "import pandas as pd\n",
-    "from env_vars import *\n",
+    "# import os\n",
+    "# import sys\n",
+    "# import json\n",
+    "# import spotipy\n",
+    "# import webbrowser\n",
+    "# import spotipy.util as util\n",
+    "# from json.decoder import JSONDecodeError\n",
+    "# import pandas as pd\n",
+    "# from env_vars import *\n",
     "\n",
-    "# ps. REDIRECT_URI is crucial here. if http://localhost:8000 is not set, or with a single '/' misplaced, it will generate a connection error.\n",
+    "# # ps. REDIRECT_URI is crucial here. if http://localhost:8000 is not set, or with a single '/' misplaced, it will generate a connection error.\n",
     "\n",
-    "# then pass them:\n",
+    "# # then pass them:\n",
     "\n",
     "\n",
-    "def authorize():\n",
-    "    token = util.prompt_for_user_token(username = SPOTIFYUSERNAME, \n",
-    "                                       scope = SCOPE, \n",
-    "                                       client_id = CLIENT_ID, \n",
-    "                                       client_secret = CLIENT_SECRET, \n",
-    "                                       redirect_uri = REDIRECT_URI)\n",
-    "    if token:\n",
-    "       sp = spotipy.Spotify(auth=token)"
+    "# def authorize():\n",
+    "#     token = util.prompt_for_user_token(username = SPOTIFYUSERNAME, \n",
+    "#                                        scope = SCOPE, \n",
+    "#                                        client_id = CLIENT_ID, \n",
+    "#                                        client_secret = CLIENT_SECRET, \n",
+    "#                                        redirect_uri = REDIRECT_URI)\n",
+    "#     if token:\n",
+    "#        sp = spotipy.Spotify(auth=token)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,31 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "danceability 0.693\n",
-      "energy 0.497\n",
-      "key 2\n",
-      "loudness -7.316\n",
-      "mode 1\n",
-      "speechiness 0.119\n",
-      "acousticness 0.679\n",
-      "instrumentalness 0\n",
-      "liveness 0.258\n",
-      "valence 0.473\n",
-      "tempo 81.308\n",
-      "type audio_features\n",
-      "id 54flyrjcdnQdco7300avMJ\n",
-      "uri spotify:track:54flyrjcdnQdco7300avMJ\n",
-      "track_href https://api.spotify.com/v1/tracks/54flyrjcdnQdco7300avMJ\n",
-      "analysis_url https://api.spotify.com/v1/audio-analysis/54flyrjcdnQdco7300avMJ\n",
-      "duration_ms 122067\n",
-      "time_signature 4\n"
+     "ename": "NameError",
+     "evalue": "name 'sp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-71a117a3e67a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maudio_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'54flyrjcdnQdco7300avMJ'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sp' is not defined"
      ]
     }
    ],
@@ -440,9 +418,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MM",
+   "display_name": "data_collection",
    "language": "python",
-   "name": "mm"
+   "name": "data_collection"
   },
   "language_info": {
    "codemirror_mode": {
@@ -454,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
