notebook updated with csv / pkl export of new data

--- a/data_collection/final_data/convert to csv.ipynb
+++ b/data_collection/final_data/convert to csv.ipynb
@@ -13,6 +13,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prepare File For Export"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -223,185 +230,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>acousticness</th>\n",
-       "      <th>artist</th>\n",
-       "      <th>danceability</th>\n",
-       "      <th>duration_ms</th>\n",
-       "      <th>energy</th>\n",
-       "      <th>instrumentalness</th>\n",
-       "      <th>key</th>\n",
-       "      <th>liveness</th>\n",
-       "      <th>loudness</th>\n",
-       "      <th>mode</th>\n",
-       "      <th>songid</th>\n",
-       "      <th>speechiness</th>\n",
-       "      <th>tempo</th>\n",
-       "      <th>time_signature</th>\n",
-       "      <th>track</th>\n",
-       "      <th>valence</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>116091</th>\n",
-       "      <td>0.8200</td>\n",
-       "      <td>Instupendo</td>\n",
-       "      <td>0.418</td>\n",
-       "      <td>235771.0</td>\n",
-       "      <td>0.204</td>\n",
-       "      <td>0.936</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0866</td>\n",
-       "      <td>-13.522</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1xm8J6EFMA6N8JDqH8vzuz</td>\n",
-       "      <td>0.0370</td>\n",
-       "      <td>110.022</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Boy</td>\n",
-       "      <td>0.0375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116238</th>\n",
-       "      <td>0.0704</td>\n",
-       "      <td>Mitchell Tenpenny</td>\n",
-       "      <td>0.614</td>\n",
-       "      <td>209032.0</td>\n",
-       "      <td>0.952</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.3620</td>\n",
-       "      <td>-2.782</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4NwmHBjPb9i9N3naLCMVCG</td>\n",
-       "      <td>0.0718</td>\n",
-       "      <td>148.079</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Truck I Drove in High School</td>\n",
-       "      <td>0.8200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116261</th>\n",
-       "      <td>0.0640</td>\n",
-       "      <td>Cold War Kids</td>\n",
-       "      <td>0.343</td>\n",
-       "      <td>324920.0</td>\n",
-       "      <td>0.487</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.1070</td>\n",
-       "      <td>-9.462</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5Xo8AsEz0gpW6Rpo2jXvBN</td>\n",
-       "      <td>0.0473</td>\n",
-       "      <td>171.217</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Goodnight Tennessee</td>\n",
-       "      <td>0.3650</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116308</th>\n",
-       "      <td>0.0292</td>\n",
-       "      <td>Elevation Worship</td>\n",
-       "      <td>0.380</td>\n",
-       "      <td>423377.0</td>\n",
-       "      <td>0.399</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.8910</td>\n",
-       "      <td>-8.466</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4Fnz6vDqufd3ens0Gf9LC5</td>\n",
-       "      <td>0.0321</td>\n",
-       "      <td>125.800</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Hallelujah Here Below</td>\n",
-       "      <td>0.1050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116324</th>\n",
-       "      <td>0.1010</td>\n",
-       "      <td>Jae Mansa</td>\n",
-       "      <td>0.834</td>\n",
-       "      <td>240353.0</td>\n",
-       "      <td>0.517</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.2720</td>\n",
-       "      <td>-5.336</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2tolmRzbUfgL5KRplIqHlu</td>\n",
-       "      <td>0.1490</td>\n",
-       "      <td>129.932</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>I Swear</td>\n",
-       "      <td>0.1930</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        acousticness             artist  danceability  duration_ms  energy  \\\n",
-       "116091        0.8200         Instupendo         0.418     235771.0   0.204   \n",
-       "116238        0.0704  Mitchell Tenpenny         0.614     209032.0   0.952   \n",
-       "116261        0.0640      Cold War Kids         0.343     324920.0   0.487   \n",
-       "116308        0.0292  Elevation Worship         0.380     423377.0   0.399   \n",
-       "116324        0.1010          Jae Mansa         0.834     240353.0   0.517   \n",
-       "\n",
-       "        instrumentalness  key  liveness  loudness  mode  \\\n",
-       "116091             0.936  8.0    0.0866   -13.522   1.0   \n",
-       "116238             0.000  6.0    0.3620    -2.782   1.0   \n",
-       "116261             0.000  2.0    0.1070    -9.462   1.0   \n",
-       "116308             0.000  2.0    0.8910    -8.466   1.0   \n",
-       "116324             0.000  5.0    0.2720    -5.336   1.0   \n",
-       "\n",
-       "                        songid  speechiness    tempo  time_signature  \\\n",
-       "116091  1xm8J6EFMA6N8JDqH8vzuz       0.0370  110.022             4.0   \n",
-       "116238  4NwmHBjPb9i9N3naLCMVCG       0.0718  148.079             4.0   \n",
-       "116261  5Xo8AsEz0gpW6Rpo2jXvBN       0.0473  171.217             4.0   \n",
-       "116308  4Fnz6vDqufd3ens0Gf9LC5       0.0321  125.800             3.0   \n",
-       "116324  2tolmRzbUfgL5KRplIqHlu       0.1490  129.932             4.0   \n",
-       "\n",
-       "                               track  valence  \n",
-       "116091                           Boy   0.0375  \n",
-       "116238  Truck I Drove in High School   0.8200  \n",
-       "116261           Goodnight Tennessee   0.3650  \n",
-       "116308         Hallelujah Here Below   0.1050  \n",
-       "116324                       I Swear   0.1930  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "songdf = songdf.reset_index()"
+    "df = df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=\"index\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[[117524], ['track']] = \"Mashin For Mine / Summer In The City\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dump pickle for updated definitive data file "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(df,open(\"./DF_v2.pkl\",\"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Export Master CSV for Athena Usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"./DF_v2.csv\")"
    ]
   },
   {
