--- a/model_notebooks/Postgres.ipynb
+++ b/model_notebooks/Postgres.ipynb
@@ -16,11 +16,11 @@
     "import psycopg2 as ps\n",
     "\n",
     "# define credentials \n",
-    "credentials = {'POSTGRES_ADDRESS' : '', # change to your endpoint\n",
+    "credentials = {'POSTGRES_ADDRESS' : 'test-1.cuxogj7vdjwn.us-east-1.rds.amazonaws.com', # change to your endpoint\n",
     "               'POSTGRES_PORT' : '', # change to your port\n",
-    "               'POSTGRES_USERNAME' : '', # change to your username\n",
-    "               'POSTGRES_PASSWORD' : '', # change to your password\n",
-    "               'POSTGRES_DBNAME' : ''} # change to your db name\n",
+    "               'POSTGRES_USERNAME' : 'postgres', # change to your username\n",
+    "               'POSTGRES_PASSWORD' : 'mypassword1!', # change to your password\n",
+    "               'POSTGRES_DBNAME' : 'test-1'} # change to your db name\n",
     "\n",
     "\n",
     "# create connection and cursor    \n",
@@ -228,9 +228,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sounddrip",
    "language": "python",
-   "name": "python3"
+   "name": "sounddrip"
   },
   "language_info": {
    "codemirror_mode": {
